# studio

./: .dockerignore  .flake8  .gitignore  .pilot-hints.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  uwsgi.ini
.github/workflows/: deploy.yml
arc_eng/: settings.py
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_chatmessage_result_alter_chatconversation_title.py  0003_chatconversation_branch_chatconversation_pr_number_and_more.py
chat/templates/: chat_base.html  chat_preview.html  start_conversation.html  view_chat.html
demo/: github.py  prompts.py  settings.py  urls.py  views.py
helm-chart/: Chart.yaml
helm-chart/templates/: deployment.yaml  secret.yaml  service.yaml
pr_manager/: apps.py  models.py  prompts.py  urls.py  views.py
pr_manager/migrations/: 0001_initial.py  0002_pullrequestreview_reviewfinding.py  0003_alter_pullrequestreview_summary.py  0004_reviewfinding_recommendation_and_more.py  0005_pullrequestreview_pr_number.py  0006_pullrequestchangerequest.py  0007_pullrequestchangerequest_completed.py  0008_reviewfinding_dismissed.py
prompts/: start-app.md.jinja2
reports/: models.py  urls.py  views.py
repositories/: apps.py  models.py  urls.py  views.py
studio/: decorators.py  github.py  prompts.py  settings.py  urls.py  util.py  views.py
tasks/: urls.py  views.py
templates/: app_header.html  base.html  base_repos.html  central.html  contribute.html  error.html  how_it_works.html  markdown_container.html  select_repository.html  studio_home.html  suite_overview.html  user_profile.html  view_task.html
users/: models.py  urls.py  views.py
(+34 files in other folders)
