[tool.poetry]
name = "studio"
version = "0.1.0"
description = "Demo application to showcase the Arcane Development Kit"
authors = ["Marco lamina <marco@arcane.engineer>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10.0"
django = "^5.1.1"
arcane-engine = "^1.9.1"
pygithub = "^2.4.0"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
