[tool.poetry]
name = "studio"
version = "0.8.2"
description = "Flagship application to showcase the Arcane Engineer platform"
authors = ["Marco lamina <marco@arcane.engineer>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10.0"
django = "^5.1.1"
arcane-engine = "^1.11.2"
pygithub = "^2.4.0"
django-allauth = "^65.0.1"
psycopg2-binary = "^2.9.9"
django-redis = "^5.4.0"
sentry-sdk = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
